Se organiza pagina de reposteria

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="menu-toggle" id="toggle">☰</div>
       <ul class="nav-links" id="nav">
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="reposteriaPasteleria.html">Repostería & Pastelería</a></li>
+        <li><a href="reposteriapasteleria.html">Repostería & Pastelería</a></li>
         <li><a href="catering.html">Catering</a></li>
       </ul>
     </nav>
