Se agregan algunas fotos

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <section class="hero">
     <h2>Bienvenidos a Dulce Bocado</h2>
     <p>Delicias dulces y saladas para cada ocasión. ¡Déjate tentar!</p>
-    <img src="img/cookie-logo.png" alt="Logo Dulce Bocado" />
+    <img src="img/logoDulceBocado.png" alt="Logo Dulce Bocado" />
   </section>
 
   <section class="carrusel">
     <div class="slider">
-      <img src="img/slide1.jpg" class="slide" />
-      <img src="img/slide2.jpg" class="slide" />
-      <img src="img/slide3.jpg" class="slide" />
+      <img src="img/Alfajores.png" class="slide" />
+      <img src="img/Emplatado.png" class="slide" />
+      <img src="img/Torta1.png" class="slide" />
     </div>
   </section>
 
