--- a/catering.html
+++ b/catering.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Catering | Dulce Bocado</title>
   <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="img/cookie.png" type="image/x-icon">
 </head>
 <body>
   <header>
