--- a/index.html
+++ b/index.html
@@ -26,11 +26,39 @@
     <img src="img/logoDulceBocado.png" alt="Logo Dulce Bocado" />
   </section>
 
+<section class="quienes-somos">
+  <h2>¿Quiénes somos?</h2>
+  <p>Dulce Bocado es una empresa familiar dedicada a endulzar momentos especiales a través de productos artesanales de repostería, pastelería y catering. Nos enfocamos en la calidad, creatividad y pasión por la gastronomía.</p>
+</section>
+
+<section class="mision-vision">
+  <div class="mision">
+    <h3>Misión</h3>
+    <p>Brindar experiencias únicas mediante sabores artesanales que deleiten a nuestros clientes en sus celebraciones más importantes, ofreciendo un servicio confiable, delicioso y personalizado.</p>
+  </div>
+  <div class="vision">
+    <h3>Visión</h3>
+    <p>Ser reconocidos como una marca líder en repostería y catering en nuestra región, destacándonos por la innovación, calidad y calidez humana.</p>
+  </div>
+</section>
+
+<section class="valores">
+  <h2>Nuestros valores</h2>
+  <ul>
+    <li>🍪 Calidad artesanal</li>
+    <li>❤️ Pasión por lo que hacemos</li>
+    <li>🎨 Creatividad en cada producto</li>
+    <li>🤝 Compromiso con nuestros clientes</li>
+  </ul>
+</section>
+
+
   <section class="carrusel">
     <div class="slider">
       <img src="img/Alfajores.png" class="slide" />
       <img src="img/Emplatado.png" class="slide" />
       <img src="img/Torta1.png" class="slide" />
+      <img src="img/galletasDecoradas.png" alt="slide">
     </div>
   </section>
 
