--- a/reposteriapasteleria.html
+++ b/reposteriapasteleria.html
@@ -33,7 +33,7 @@
         <article class="producto">
           <img src="img/Cupcakes.png" alt="Cupcake de vainilla" />
           <h3>Cupcake de vainilla</h3>
-          <p>Esponjoso con crema de mantequilla sabor fresa.</p>
+          <p>Esponjoso con crema de mantequilla sabor chocolate.</p>
           <a class="btn-wsp" href="https://wa.me/573013150021?text=Hola%2C%20quiero%20más%20información%20sobre%20el%20Cupcake%20de%20vainilla" target="_blank">Pedir por WhatsApp</a>
         </article>
       </div>
@@ -43,14 +43,14 @@
       <h2>Tortas Temáticas</h2>
       <div class="productos">
         <article class="producto">
-          <img src="img/Torta3.png" alt="Torta temática unicornio" />
-          <h3>Torta unicornio</h3>
+          <img src="img/Torta3.png" alt="Torta Harry Potter" />
+          <h3>Torta Harry Potter</h3>
           <p>Bizcochuelo suave decorado con crema y colores pastel.</p>
           <a class="btn-wsp" href="https://wa.me/573013150021?text=Hola%2C%20quiero%20más%20información%20sobre%20la%20Torta%20unicornio" target="_blank">Pedir por WhatsApp</a>
         </article>
         <article class="producto">
-          <img src="img/" alt="Torta de superhéroes" />
-          <h3>Torta de superhéroes</h3>
+          <img src="img/Torta4.png" alt="Torta de perrito" />
+          <h3>Torta de perrito</h3>
           <p>Decorada con fondant y temática personalizada.</p>
           <a class="btn-wsp" href="https://wa.me/573013150021?text=Hola%2C%20quiero%20más%20información%20sobre%20la%20Torta%20de%20superhéroes" target="_blank">Pedir por WhatsApp</a>
         </article>
