--- a/index.html
+++ b/index.html
@@ -28,17 +28,20 @@
 
 <section class="quienes-somos">
   <h2>¿Quiénes somos?</h2>
-  <p>Dulce Bocado es una empresa familiar dedicada a endulzar momentos especiales a través de productos artesanales de repostería, pastelería y catering. Nos enfocamos en la calidad, creatividad y pasión por la gastronomía.</p>
+  <p>Dulce Bocado es una empresa familiar apasionada por endulzar y acompañar los momentos más especiales de la vida. Nos especializamos en la elaboración de productos artesanales de repostería, pastelería y catering, combinando recetas tradicionales con un toque creativo y personalizado.
+Cada creación es hecha con dedicación, ingredientes de alta calidad y atención al detalle, porque creemos que la buena comida tiene el poder de conectar corazones y crear recuerdos inolvidables.
+
+Nuestra misión es brindar experiencias únicas a través del sabor, la estética y el servicio, adaptándonos a las necesidades y celebraciones de nuestros clientes. Ya sea un desayuno sorpresa, un evento corporativo o una torta personalizada, en Dulce Bocado ponemos el alma en cada pedido.</p>
 </section>
 
 <section class="mision-vision">
   <div class="mision">
     <h3>Misión</h3>
-    <p>Brindar experiencias únicas mediante sabores artesanales que deleiten a nuestros clientes en sus celebraciones más importantes, ofreciendo un servicio confiable, delicioso y personalizado.</p>
+    <p>En Dulce Bocado, nuestra misión es crear experiencias memorables a través de sabores artesanales, que acompañen y enriquezcan las celebraciones más significativas de nuestros clientes. Nos comprometemos a ofrecer productos deliciosos, elaborados con pasión y detalle, junto a un servicio cercano, confiable y completamente personalizado.</p>
   </div>
   <div class="vision">
     <h3>Visión</h3>
-    <p>Ser reconocidos como una marca líder en repostería y catering en nuestra región, destacándonos por la innovación, calidad y calidez humana.</p>
+    <p>Convertirnos en una empresa referente en repostería y catering artesanal dentro de nuestra región, reconocida por la innovación constante en nuestros productos, el compromiso con la calidad y un servicio cálido y humano. Aspiramos a estar presentes en los momentos más importantes de nuestros clientes, creando experiencias memorables a través de sabores únicos y atención personalizada.</p>
   </div>
 </section>
 
