Se mejora slide

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ Nuestra misión es brindar experiencias únicas a través del sabor, la estétic
       <img src="img/Emplatado.png" class="slide" />
       <img src="img/Torta1.png" class="slide" />
       <img src="img/galletasDecoradas.png" alt="slide">
+      <img src="img/picnicRomantico.png" alt="slide">
     </div>
   </section>
 
