--- a/index.html
+++ b/index.html
@@ -59,10 +59,17 @@ Nuestra misión es brindar experiencias únicas a través del sabor, la estétic
   <section class="carrusel">
     <div class="slider">
       <img src="img/Alfajores.png" class="slide" />
+      <img src="img/bandejaNavideña.png" class="slide" />
+      <img src="img/cajaSorpresa.png" class="slide" />
+      <img src="img/Cupcakes.png" class="slide" />
+      <img src="img/Cupcakes2.png" class="slide" />
       <img src="img/Emplatado.png" class="slide" />
       <img src="img/Torta1.png" class="slide" />
       <img src="img/galletasDecoradas.png" alt="slide">
       <img src="img/picnicRomantico.png" alt="slide">
+      <img src="img/torta2.png" class="slide" />
+      <img src="img/desayunosParaEventos.png" class="slide" />
+      <img src="img/picnicRomantico2.png" class="slide" />
     </div>
   </section>
 
