--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ Nuestra misión es brindar experiencias únicas a través del sabor, la estétic
       <img src="img/Cupcakes2.png" class="slide" />
       <img src="img/Emplatado.png" class="slide" />
       <img src="img/Torta1.png" class="slide" />
-      <img src="img/galletasDecoradas.png" alt="slide">
-      <img src="img/picnicRomantico.png" alt="slide">
+      <img src="img/galletasDecoradas.png" class="slide">
+      <img src="img/picnicRomantico.png" class="slide">
       <img src="img/torta2.png" class="slide" />
       <img src="img/desayunosParaEventos.png" class="slide" />
       <img src="img/picnicRomantico2.png" class="slide" />
