--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@ Nuestra misión es brindar experiencias únicas a través del sabor, la estétic
 
 
   <section class="carrusel">
-    <section class="carrusel">
-</section>
   <div class="slider" id="slider">
     <img src="img/Alfajores.png" class="slide" />
     <img src="img/bandejaNavideña.png" class="slide" />
@@ -67,13 +65,14 @@ Nuestra misión es brindar experiencias únicas a través del sabor, la estétic
     <img src="img/Cupcakes2.png" class="slide" />
     <img src="img/Emplatado.png" class="slide" />
     <img src="img/Torta1.png" class="slide" />
-    <img src="img/galletasDecoradas.png" class="slide">
-    <img src="img/picnicRomantico.png" class="slide">
+    <img src="img/galletasDecoradas.png" class="slide" />
+    <img src="img/picnicRomantico.png" class="slide" />
     <img src="img/torta2.png" class="slide" />
     <img src="img/desayunosParaEventos.png" class="slide" />
     <img src="img/picnicRomantico2.png" class="slide" />
   </div>
 </section>
+
 
   <section class="contacto">
     <h2>Contáctanos</h2>
