Ajusta la estructura del carrusel y mejora la fluidez de la animación para dispositivos móviles.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ Nuestra misión es brindar experiencias únicas a través del sabor, la estétic
     <img src="img/torta2.png" class="slide" />
     <img src="img/desayunosParaEventos.png" class="slide" />
     <img src="img/picnicRomantico2.png" class="slide" />
+    <img src="img/Alfajores.png" class="slide" />
   </div>
 </section>
 
